--- a/index.html
+++ b/index.html
@@ -23,21 +23,22 @@
 </head>
 
 <body>
-	<p><div align="center"><img src="file:///C|/Users/mohdk/Dropbox/ProjekTypsetting/0HackJomMain/JomMain/SportMate.png" width="215" height="206" alt=""/></div></p>
+	<p><div align="center"><img src="sportmateqr.png" width="215" height="206" alt=""/></div></p>
 	<div align="center">Scan QRCode from your mobile device for ease access to this page</div>
 	<table width="100%" border="1">
 	  <tbody>
 	    <tr>
 	      <td width="50%%"><div align="right">SportMate</div></td>
-	      <td width="50%"><div align="left"><img src="file:///C|/Users/mohdk/Dropbox/ProjekTypsetting/0HackJomMain/JomMain/SportMate.png" width="146" height="141" alt=""/></div></td>
+	      <td width="50%"><div align="left"><img src="sportmate.png" width="146" height="141" alt=""/></div></td>
         </tr>
       </tbody>
 </table>
 	<div align="center">SportMate available for Android
-	<div>
-	  <input type="button" name="button" id="button" value="Download">
-	</div>
-	<button class="btn"><i class="fa fa-download"></i> Download</button>
+	<div>	  
+		<form method="get" action="sportmate.apk">
+		   <button type="submit" class="btn"><i class="fa fa-download"></i> Download</button>
+		</form>
+	</div>	
 	<div>Download Now!</div></div>
 </body>
 </html>
