--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <body>
 	<p><div align="center"><img src="sportmateqr.png" width="215" height="206" alt=""/></div></p>
 	<div align="center">Scan QRCode from your mobile device for ease access to this page</div>
-	<table width="100%" border="1">
+	<table width="100%" border="0">
 	  <tbody>
 	    <tr>
-	      <td width="50%%"><div align="right">SportMate</div></td>
+	      <td width="50%%"><div align="right">SportMate Mobile Application<br><i>Making your Sport More Enjoyable With Friend</i></div></td>
 	      <td width="50%"><div align="left"><img src="sportmate.png" width="146" height="141" alt=""/></div></td>
         </tr>
       </tbody>
