--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<table width="100%" border="0">
 	  <tbody>
 	    <tr>
-	      <td width="50%%"><div align="right">SportMate Mobile Application<br><i>Making your Sport More Enjoyable With Friend</i></div></td>
+	      <td width="50%%"><div align="right"><b><font size="20">SportMate Mobile Application</font><b><br><i>Making your Sport More Enjoyable With Friend</i></div></td>
 	      <td width="50%"><div align="left"><img src="sportmate.png" width="146" height="141" alt=""/></div></td>
         </tr>
       </tbody>
