--- a/index.html
+++ b/index.html
@@ -33,12 +33,22 @@
         </tr>
       </tbody>
 </table>
-	<div align="center">SportMate available for Android
+<div align="center">SportMate available for Android
 	<div>	  
 		<form method="get" action="sportmate.apk">
 		   <button type="submit" class="btn"><i class="fa fa-download"></i> Download</button>
 		</form>
 	</div>	
 	<div>Download Now!</div></div>
+	
+	<div align="center">Powered by HERE Map Technologies, developed for HereMyHack2018</div>
+	<p>Project Name: SportMate Mobile Application</p>
+	<p> Team Leader: Mohd Khairun Nasir Bin Sa'adi (cyclonmaster@gmail.com)</p>
+	<p>Team Member: Saiful Ashraf Bin Sa'adi</p>
+    <p>Project Slides:</p>
+	<p>Demo Video:</p>
+	<iframe width="420" height="315"
+src="https://www.youtube.com/embed/tgbNymZ7vqY">
+</iframe>
 </body>
 </html>
