--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 	</div>	
 	<div>Download Now!</div></div>
 	
-	<div align="center">Powered by HERE Map Technologies, developed for HereMyHack2018</div>
+	<div align="center">Powered by HERE Map Technologies, developed for HereMyHack2018
 	<p>Project Name: SportMate Mobile Application</p>
 	<p> Team Leader: Mohd Khairun Nasir Bin Sa'adi (cyclonmaster@gmail.com)</p>
 	<p>Team Member: Saiful Ashraf Bin Sa'adi</p>
     <p>Project Slides:</p>
 	<p>Demo Video:</p>
 	<iframe width="420" height="315"
-src="https://www.youtube.com/embed/tgbNymZ7vqY">
-</iframe>
+	src="https://www.youtube.com/embed/tgbNymZ7vqY">
+	</iframe></div>
 </body>
 </html>
