--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 	<p> Team Leader: Mohd Khairun Nasir Bin Sa'adi (cyclonmaster@gmail.com)</p>
 	<p>Team Member: Saiful Ashraf Bin Sa'adi</p></b>
     <p><b>Project Slides:</b></p>
+	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTsoFGSrvwmttWt1U3xrIRtrJPfeowRo4Ga6J3ksx4LB-cbZ7kywYRoOe16QjDGsreBo1wVKZohRHvF/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 	<p><b>Demo Video:</b></p>
 	<iframe width="420" height="315"
 	src="https://www.youtube.com/embed/tgbNymZ7vqY">
