--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
 	</div>	
 	<div>Download Now!</div></div>
 	
-	<div align="center">Powered by HERE Map Technologies, developed for HereMyHack2018
-	<b><p>Project Name: SportMate Mobile Application</p>
+	<div align="center">
+	  <p>Powered by HERE Map Technologies, developed for HereMyHack2018
+	  </p>
+	  <p>Demo Account for testing purpose(username/password):</p>
+	  <div>demo account 1: demouser1 / password</div>
+	  <div>demo account 2: demouser2 / password</div>
+	  <b><p>Project Name: SportMate Mobile Application</p>
 	<p> Team Leader: Mohd Khairun Nasir Bin Sa'adi (cyclonmaster@gmail.com)</p>
 	<p>Team Member: Saiful Ashraf Bin Sa'adi</p></b>
     <p><b>Project Slides:</b></p>
@@ -50,6 +55,6 @@
 	<p><b>Demo Video:</b></p>
 	<iframe width="420" height="315"
 	src="https://www.youtube.com/embed/tgbNymZ7vqY">
-	</iframe></div>
+</iframe></div>
 </body>
 </html>
